Bug 1814748 - Fix APIs for display of external messages. r=john.bieling

This reflects the fact that we use a real message header object for external messages now.

Differential Revision: https://phabricator.services.mozilla.com/D170731

--HG--
extra : amend_source : 9bfdabcc32e83df6eb6f637f108f913f78f9c7e0